--- a/.i3/config
+++ b/.i3/config
@@ -1,6 +1,7 @@
 font pango:DejaVu Sans Mono 10
 
-set $mod Mod4 # super key
+# set modifier to super key
+set $mod Mod4
 
 # use these keys for focus, movement, and resize directions
 set $up l
